[package]
name = "cry-rs"
version = "0.1.0"
authors = ["Davide Galassi <davxy@datawok.net>"]
description = "CRY crypto library wrapper in Rust"
repository = "https://github.com/davxy/cry-rs"
license = "MIT"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
typenum = "1.15.0"
cry-sys = { path = "./cry-sys" }

[dev-dependencies]
hex = "0.4.3"

[features]
weak = []
historical = []